--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>My Seco commit eli</title>
+<title>My Seco commit eli after github</title>
 <head>
 <style type="text/css">
 div
